--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -4,13 +4,13 @@ body {
   padding: 0;
 }
 
+body, body * {
+    box-sizing: border-box;
+}
+
 .app {
-  padding: 1em;
-  max-width: 1050px;
   width: 100%;
   height: 100vh;
-  margin: 0 auto;
-  box-sizing: border-box;
 }
 
 canvas {
@@ -20,5 +20,4 @@ canvas {
   width: 100%;
   height: 100vh;
   z-index: -1;
-  background-image: linear-gradient(bottom, #90181A 0%, #d42426 84%);
 }
