--- a/src/components/CalendarWindow/style.css
+++ b/src/components/CalendarWindow/style.css
@@ -1,4 +1,4 @@
-.item {
+/*.item {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,8 +14,16 @@
   background-color: rgba(255,255,255, 0.8);
   color: red;
   outline: 0;
-}
+}*/
 
+.item {
+  font-size: 5vw;
+  color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
 
 .item-9 {
   grid-column: 1 / span 2;
