--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -11,6 +11,7 @@ body, body * {
 .app {
   width: 100%;
   height: 100vh;
+  padding: 1rem;
 }
 
 canvas {
@@ -20,4 +21,12 @@ canvas {
   width: 100%;
   height: 100vh;
   z-index: -1;
+}
+
+#sky {
+  background: -webkit-linear-gradient(#00111e 30%, #033d5e);
+  background: -moz-linear-gradient(#00111e 30%, #033d5e);
+  background: -o-linear-gradient(#00111e 30%, #033d5e);
+  background: linear-gradient(#00111e 30%, #033d5e);
+  overflow: hidden;
 }
