--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -14,6 +14,15 @@ body, body * {
   padding: 1rem;
 }
 
+h1 {
+  font-family: "Lobster", serif;
+  color: #fff;
+  font-size: 5vw;
+  text-align: center;
+  margin: 0.25em 0 0.5em;
+  text-shadow: 4px 4px 0 rgba(255, 255, 255, 0.3);
+}
+
 canvas {
   position:absolute;
   top:0;
