font color update

--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,6 +1,6 @@
 .item-container {
   display:grid;
   grid-template-columns: repeat(4, 1fr);
-  height: 100%;
-  width: 100%;
+  grid-gap: 10px;
+  flex: 1;
 }
