--- a/src/components/CalendarWindow/style.css
+++ b/src/components/CalendarWindow/style.css
@@ -17,18 +17,23 @@
 }*/
 
 .item {
-  font-size: 5vw;
-  color: rgba(255, 255, 255, 0.8);
+  font-size: 3vw;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  background-color: rgba(0,0,0,.2);
+  color: #cccfd2;
+}
+
+/*.item-4 {
+  grid-row: 1 / span 2;
+  /*grid-row: third-line / 4;
 }
 
 .item-9 {
   grid-column: 1 / span 2;
   grid-row: 3 / span 2;
-  /*grid-row: third-line / 4;*/
 }
 
 .item-22,
@@ -40,4 +45,4 @@
 .item-24 {
   grid-column: 1 / span 4;
   grid-row-end: span 2;
-}
+}*/
