--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -1,32 +1,26 @@
-body {
-  margin:0;
-  height:100%;
-  padding: 0;
-}
-
-body, body * {
-    box-sizing: border-box;
-}
-
 .app {
   width: 100%;
   height: 100vh;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
   font-family: "Lobster", serif;
-  color: #fff;
   font-size: 5vw;
   text-align: center;
   margin: 0.25em 0 0.5em;
-  text-shadow: 4px 4px 0 rgba(255, 255, 255, 0.3);
+  /*text-shadow: 4px 4px 0 rgba(255, 255, 255, 0.3);*/
+  font-weight: normal;
 }
 
 canvas {
-  position:absolute;
+  position: fixed;
   top:0;
   left:0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100vh;
   z-index: -1;
