--- a/src/components/FancyWord/style.css
+++ b/src/components/FancyWord/style.css
@@ -2,19 +2,8 @@
   font-size: 2em;
   text-transform: uppercase;
   font-weight: bold;
-  text-shadow: 1px 1px 0 yellow;
 
-  opacity: 0.8;
-  font-size: 6em;
-  font-weight: bold;
-  line-height: 1;
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  -webkit-background-clip: text;
-
-  -webkit-text-fill-color: transparent;
-  background-image: url(https://images.unsplash.com/photo-1465101162946-4377e57745c3?auto=format&fit=crop&w=2714&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
+  /*https://codepen.io/FelixRilling/pen/qzfoc*/
 }
 
 .fancy-letter {
@@ -28,10 +17,10 @@
 @keyframes floatAndAppear {
   from {
     opacity: 0;
-    transform: translateX(10px);
+    transform: translateX(10px) rotate(5deg);
   }
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateX(0) rotate(0);
   }
 }
