--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Roboto', serif;
   color: rgba(255, 255, 255, 0.8);
   color: #cccfd2;
+  font-size: 20px;
 }
 
 body, body * {
