--- a/src/components/CalendarWindow/style.css
+++ b/src/components/CalendarWindow/style.css
@@ -1,21 +1,3 @@
-/*.item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  font-size: calc(2em + 0.02vw);
-  font-weight: bold;
-  color: rgba(255,255,255,0.8);
-  font-family: 'Ubuntu', arial;
-}
-
-.item:hover,
-.item:focus {
-  background-color: rgba(255,255,255, 0.8);
-  color: red;
-  outline: 0;
-}*/
-
 .item {
   font-size: 3vw;
   display: flex;
@@ -24,6 +6,14 @@
   text-decoration: none;
   background-color: rgba(0,0,0,.2);
   color: #cccfd2;
+  padding: 3em;
+}
+
+
+@media (min-width: 768px) {
+  .item {
+    padding: 0;
+  }
 }
 
 /*.item-4 {
