--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,6 +1,12 @@
 .item-container {
   display:grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
   flex: 1;
+}
+
+@media (min-width: 768px) {
+  .item-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
