--- a/src/components/Item/style.css
+++ b/src/components/Item/style.css
@@ -1,3 +1,7 @@
-.compliment {
-  font-family: "Lobster", serif;
+.single-day-container {
+  max-width: 450px;
+  width: 100%;
+  margin: 0 auto;
+  font-size: 1.2em;
+  text-align: center;
 }
