--- a/src/components/FancyWord/style.css
+++ b/src/components/FancyWord/style.css
@@ -1,16 +1,18 @@
 .fancy-letters {
-  font-size: 2em;
+  font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
-
   /*https://codepen.io/FelixRilling/pen/qzfoc*/
 }
 
 .fancy-letter {
   display: inline-block;
   opacity: 0;
+  background-color: green;
+  padding: 2px;
   transform: translateX(10px);
   animation: floatAndAppear 0.2s;
+  animation-delay: 0.2s;
   animation-fill-mode: forwards;
 }
 
