--- a/src/components/Item/style.css
+++ b/src/components/Item/style.css
@@ -3,5 +3,21 @@
   width: 100%;
   margin: 0 auto;
   font-size: 1.2em;
-  text-align: center;
+  padding-top: 1em;
+
+  opacity: 0;
+  animation: appearIn 0.2s ease-in-out;
+  transform: translateX(10px);
+  animation-fill-mode: forwards;
+}
+
+@keyframes appearIn {
+  from {
+    opacity: 0;
+    transform: translateX(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
