--- a/src/components/CalendarWindow/style.css
+++ b/src/components/CalendarWindow/style.css
@@ -1,5 +1,5 @@
 .item {
-  font-size: 3vw;
+  font-size: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,6 +13,7 @@
 @media (min-width: 768px) {
   .item {
     padding: 0;
+    font-size: 3vw;
   }
 }
 
