--- a/src/components/FancyWord/style.css
+++ b/src/components/FancyWord/style.css
@@ -1,15 +1,20 @@
 .fancy-letters {
-  font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
+  text-align: center;
+  display: block;
+  font-size: 1.2em;
   /*https://codepen.io/FelixRilling/pen/qzfoc*/
 }
 
 .fancy-letter {
   display: inline-block;
   opacity: 0;
-  background-color: green;
-  padding: 2px;
+  background-color: #ffd700;
+  color: #00111e;
+  padding: 0 1px;
+  min-width: 10px;
+  margin-right: 1px;
   transform: translateX(10px);
   animation: floatAndAppear 0.2s;
   animation-delay: 0.2s;
