--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -3,6 +3,9 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
   flex: 1;
+  width: 100%;
+  max-width: 1150px;
+  margin: 0 auto;
 }
 
 @media (min-width: 768px) {
